[package]
name = "koornbussy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["http2"]}
tokio = { version = "1.39.2", features = ["full"] }
# tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
