[package]
name = "koornbussy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7", features = ["http2"]}
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.5", features = ["trace"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ureq = "2.10"
